--- a/package.json
+++ b/package.json
@@ -10,22 +10,39 @@
     "package": "plasmo package"
   },
   "dependencies": {
+    "@ant-design/cssinjs": "1.22.1",
+    "@ant-design/icons": "5.5.2",
+    "@ant-design/x": "1.0.3",
+    "@plasmohq/messaging": "0.6.2",
+    "antd": "5.22.5",
+    "lodash-es": "4.17.21",
     "plasmo": "0.89.4",
+    "rc-tween-one": "3.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "4.1.1",
     "@types/chrome": "0.0.258",
+    "@types/lodash-es": "4.17.12",
     "@types/node": "20.11.5",
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
+    "autoprefixer": "10.4.20",
+    "postcss": "8.4.49",
     "prettier": "3.2.4",
+    "tailwindcss": "3.4.17",
     "typescript": "5.3.3"
   },
   "manifest": {
     "host_permissions": [
       "https://*/*"
+    ],
+    "permissions": [
+      "scripting",
+      "tabs",
+      "activeTab",
+      "tabGroups"
     ]
   }
 }
