--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@ant-design/icons": "5.5.2",
     "@ant-design/x": "1.0.3",
     "@plasmohq/messaging": "0.6.2",
+    "ahooks": "3.8.4",
     "antd": "5.22.5",
     "lodash-es": "4.17.21",
     "plasmo": "0.89.4",
