--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@ant-design/icons": "5.5.2",
     "@ant-design/x": "1.0.3",
     "@plasmohq/messaging": "0.6.2",
+    "@plasmohq/storage": "1.13.0",
     "ahooks": "3.8.4",
     "antd": "5.22.5",
     "lodash-es": "4.17.21",
@@ -44,6 +45,7 @@
       "tabs",
       "activeTab",
       "tabGroups"
-    ]
+    ],
+    "default_locale": "en"
   }
 }
