--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "4.1.1",
+    "@playwright/test": "1.49.1",
     "@types/chrome": "0.0.258",
     "@types/lodash-es": "4.17.12",
     "@types/node": "20.11.5",
@@ -44,7 +45,8 @@
       "scripting",
       "tabs",
       "activeTab",
-      "tabGroups"
+      "tabGroups",
+      "storage"
     ],
     "default_locale": "en"
   }
