--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@plasmohq/storage": "1.13.0",
     "ahooks": "3.8.4",
     "antd": "5.22.5",
+    "dayjs": "1.11.13",
     "lodash-es": "4.17.21",
     "plasmo": "0.89.4",
     "rc-tween-one": "3.0.6",
@@ -26,7 +27,7 @@
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "4.1.1",
     "@playwright/test": "1.49.1",
-    "@types/chrome": "0.0.258",
+    "@types/chrome": "0.0.297",
     "@types/lodash-es": "4.17.12",
     "@types/node": "20.11.5",
     "@types/react": "18.2.48",
@@ -48,6 +49,15 @@
       "tabGroups",
       "storage"
     ],
-    "default_locale": "en"
+    "default_locale": "en",
+    "commands": {
+      "open-input": {
+        "suggested_key": {
+          "default": "Ctrl+Shift+Z",
+          "mac": "Command+Shift+Z"
+        },
+        "description": "Open input"
+      }
+    }
   }
 }
