feat: editor init

--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@ant-design/cssinjs": "1.22.1",
     "@ant-design/icons": "5.5.2",
     "@ant-design/x": "1.0.3",
+    "@monaco-editor/react": "4.6.0",
     "@plasmohq/messaging": "0.6.2",
     "@plasmohq/storage": "1.13.0",
     "ahooks": "3.8.4",
     "antd": "5.22.5",
     "dayjs": "1.11.13",
     "lodash-es": "4.17.21",
+    "monaco-editor": "0.52.2",
     "plasmo": "0.89.4",
     "rc-tween-one": "3.0.6",
     "react": "18.2.0",
