--- a/.github/workflows/submit.yml
+++ b/.github/workflows/submit.yml
@@ -14,9 +14,9 @@ jobs:
           key: ${{ runner.os }}-${{ hashFiles('**/pnpm-lock.yaml') }}
           restore-keys: |
             ${{ runner.os }}-
-      - uses: pnpm/action-setup@v2.4.0
+      - uses: pnpm/action-setup@v4.0.0
         with:
-          version: latest
+          version: 8.9.0
           run_install: true
       - name: Use Node.js 16.x
         uses: actions/setup-node@v3.4.1
