--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ahooks": "3.8.4",
     "antd": "5.22.5",
     "dayjs": "1.11.13",
+    "localforage": "1.10.0",
     "lodash-es": "4.17.21",
     "monaco-editor": "0.52.2",
     "plasmo": "0.89.4",
