--- a/.github/workflows/submit.yml
+++ b/.github/workflows/submit.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Use Node.js 16.x
         uses: actions/setup-node@v3.4.1
         with:
-          node-version: 16.x
+          node-version: 16.20.2
           cache: "pnpm"
       - name: Build the extension
         run: pnpm build
